# IMGEditor-Plus

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  build.rs  package-release.ps1
.cargo/: config.toml
asset/logo/: icon.rc
docs/: cpp-codebase-analysis.md  export-optimization-lessons.md  rust-vs-cpp-merits.md  windows_file_association.md
examples/: benchmark_export.rs  benchmark_stress.rs
src/: archive.rs  config.rs  editor.rs  hotkeys.rs  main.rs  runtime.rs  tasks.rs  updater.rs  utils.rs  widget.rs
src/inspector/: mod.rs  nif.rs  texture.rs  viewer3d.rs
src/parser/: col.rs  dff.rs  inspector.rs  iparser.rs  mod.rs  pc_v1.rs  pc_v2.rs  texture_decoder.rs  txd.rs  unknown.rs
src/ui/: animator.rs  app.rs  application.rs  design.rs  dialogs.rs  easing.rs  fonts.rs  keymap.rs  mod.rs  renderer.rs  theme.rs  view.rs  widgets.rs
src/ui/tokens/: elevation.rs  mod.rs  motion.rs  radius.rs  spacing.rs  tokens.rs  typography.rs
src/ui/tokens/color/: mod.rs  palette.rs  scale.rs
