[package]
name = "imgeditor"
version = "0.8.0"
edition = "2024"

[features]
default = ["native-dialogs"]
native-dialogs = ["dep:rfd"]

[dependencies]
anyhow = "1.0"
async-channel = "2"
eframe = "0.27"
egui = "0.27"
serde_json = "1"
smol = "2"
thiserror = "1.0"
ureq = "2"
webbrowser = "1"
rfd = { version = "0.17", default-features = false, optional = true }

[dev-dependencies]
tempfile = "3"
