[package]
name = "imgeditor"
version = "0.9.0"
edition = "2024"
rust-version = "1.96"

[features]
default = ["native-dialogs"]
native-dialogs = ["dep:rfd"]

[dependencies]
anyhow = "1.0"
chrono = "0.4"
compact_str = "0.8"
dark-light = "2"
iced = { version = "0.14", features = ["tokio", "lazy", "advanced", "highlighter", "image", "svg"] }
iced_aw = { version = "0.14.1", features = ["menu", "tabs", "context_menu", "card"] }
iced_fonts = { version = "0.3.0", features = ["lucide"] }
memmap2 = "0.9"
rayon = "1.10"
serde_json = "1"
smallvec = "1"
thiserror = "1.0"
tokio = { version = "1.40", features = ["rt-multi-thread", "fs", "macros", "sync", "time", "io-util"] }
ureq = "2"
webbrowser = "1"
rfd = { version = "0.15", default-features = false, features = ["tokio", "common-controls-v6"], optional = true }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
panic = "abort"
strip = "symbols"
