[package]
name = "imgeditor"
version = "3.1.0"
edition = "2024"
rust-version = "1.96"

[features]
default = ["native-dialogs"]
native-dialogs = ["dep:rfd"]
bench = []

[lib]
name = "imgeditor"
path = "src/main.rs"

[[bin]]
name = "imgeditor"
path = "src/main.rs"

[[example]]
name = "benchmark_export"
required-features = ["bench"]

[[example]]
name = "benchmark_stress"
required-features = ["bench"]

[dependencies]
anyhow = "1.0"
chrono = "0.4"
compact_str = "0.8"
dark-light = "2"
iced = { version = "0.14", features = ["tokio", "lazy", "advanced", "highlighter", "image", "svg"] }
iced_aw = { version = "0.14.1", features = ["menu", "tabs", "context_menu", "card"] }
iced_fonts = { version = "0.3.0", features = ["lucide"] }
memmap2 = "0.9"
rayon = "1.10"
serde_json = "1"
smallvec = "1"
thiserror = "1.0"
tokio = { version = "1.40", features = ["rt-multi-thread", "fs", "macros", "sync", "time", "io-util"] }
ureq = "2"
webbrowser = "1"
rfd = { version = "0.15", default-features = false, features = ["tokio", "common-controls-v6"], optional = true }

# NIF inspector (v3.0). The 3D viewer writes geometry to a temporary PLY file
# and opens it with the system default handler, avoiding the need for an
# embedded 3D renderer (OpenGL/winit threading is incompatible with Iced's
# winit on the main thread). See `src/inspector/viewer3d.rs`.

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
panic = "abort"
strip = "symbols"
